--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -49,7 +49,7 @@ Mit der Formulierung "neue Aufträge-UI" meinen wir, dass es in plentymarkets ei
 * "Offene Beta" bedeutet, dass du die neue Order-UI sehen und ausprobieren kannst. Die neue UI hat allerdings noch nicht den vollen Funktionsumfang.
 
 // TODO: alle xref anpassen
-Du findest in diesem Bereich Informationen zu eingehenden Aufträgen und wie du nach dem Auftragseingang fortfährst. Je nachdem für welche Verkaufsstrategie und Verkaufskanäle du dich entscheidest, fließen nach erfolgreicher Einrichtung der Kanäle Aufträge verschiedener xref:auftraege:auftragsherkunft.adoc#[Herkünfte] in dein plentymarkets System ein. Neben dem eigenen Webshop sind dies in erster Linie die verschiedenen xref:maerkte:maerkte.adoc#[Marktplätze und Preisportale].
+Du findest in den folgenden Kapiteln Informationen zu eingehenden Aufträgen und wie du nach dem Auftragseingang fortfährst. Je nachdem für welche Verkaufsstrategie und Verkaufskanäle du dich entscheidest, fließen nach erfolgreicher Einrichtung der Kanäle Aufträge verschiedener xref:auftraege:auftragsherkunft.adoc#[Herkünfte] in dein plentymarkets System ein. Neben dem eigenen Webshop sind dies in erster Linie die verschiedenen xref:maerkte:maerkte.adoc#[Marktplätze und Preisportale].
 
 plentymarkets verfügt u.a. über eine umfangreiche Schnittstelle zu xref:maerkte:amazon-einrichten.adoc#[Amazon], die nicht nur den automatisierten Abgleich mit dem Seller Central gewährleistet, sondern auch weitere Amazon-Angebote wie xref:maerkte:amazon-fulfillment.adoc#[Fulfillment by Amazon] umfasst.
 
@@ -61,6 +61,9 @@ Nach dem Auftragseingang werden alle Aufträge in einem Menü gesammelt und in e
 |Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der Side cart ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
 *Warenkorb als Side cart* = Der Warenkorb wird seitlich als neues Fenster dargestellt, wenn man ihn öffnet. +
 *Warenkorb als Tabelle (unterhalb der Suchergebnisse)* = Der Warenkorb wird als Tabelle unterhalb der Artikeltabelle (generiert durch die Artikelsuche) dargestellt.
+
+
+*_Hinweis:_* Die Suche wird nicht mehr direkt beim Öffnen ausgeführt. Auf Suchen klicken, um für den voreingestellten Zeitraum alle Aufträge anzuzeigen oder Suchergebnisse durch Filtereinstellungen weiter eingrenzen.
 
 
 Folgende Auftragstypen gibt es in plentymarkets:
@@ -333,6 +336,19 @@ Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach h
 ======
 
 // TODO: struktur und richtiger Text
+
+NEU Ansicht test
+Einstellungen aufklappen
+Slider *Portlet eingeklappt*
+Die Namen der Portlets können individualisiert werden. Gib bei Titel einen neuen Namen für dein Portlet ein. 
+Darunter: # Kacheln pro Zeile
+. Wähle aus: Keine Einschränkung, Eine Kachel bis 6 Kacheln - je nach Wahl der Anzahl der Kacheln wird das Portlet dargestellt
+
+Elemente aufklappen
+Die möglichen Felder können per Drag&Drop dem Portlet hinzugefügt werden. Im Portlet kannst du sie löschen, um sie wieder zurück in den rechten Bereich zu schieben.
+Artikelmenge
+
+
 Portlets
 siehe Detailansicht Gestaltung bei Artikel
 Auf der neuen Aufträge UI sind die Informationen in Portlets aufgeteilt.
@@ -1284,16 +1300,17 @@ Hier wird erklärt, welche Filter und Operatoren zur Verfügung stehen und je na
 
 [.instruction]
 Filter wählen: 
-
+// TODO: prüfen
 . Öffne *Aufträge » Aufträge (Testphase)*.
 . Gehe auf das Symbol Filter und öffne durch Klick auf das Symbol die Filterauswahl.
-. neu: Viele Filter haben Operatoren, um die Auswahl zu verfeinern.
+. Wähle die Filter, anhand derer du suchen möchtest. Bei vielen Filtern kannst du zusätzlich  Operatoren wählen, um die Suche zu verbessern. 
 . Gehe auf *Standardansicht » Symbol Ansicht bearbeiten » Neue Ansicht erstellen* (Icon).
 . Gib der neuen Ansicht einen *Namen* und gehe auf speichern (icon:save[role="green"]), um eine neue Ansicht zu erstellen.
-→ Die *Neue Ansicht* wurde erfolgreich erstellt, wenn sich ...
 . Öffne das Portlet *Auftragsübersicht* und wähle deine neue Ansicht.
-. Klicke auf Filter-Einstellungen
+. Klicke auf die Symbol Filter-Einstellungen
 → Es öffnet sich die zweispaltige Filterauswahl
+
+
 . Öffne die gewünschte Gruppe innerhalb der *Verfügbaren Filter*.
 → Die Auswahl öffnet sich.
 
@@ -1374,12 +1391,14 @@ Angezeigte Filter wählen:
 |====
 |Einstellung |Erläuterung
 
-// TODO: wie kann man die Filter am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu; geplant: für ausgewählte Filter in der Ansicht sollen es noch 3 Spalten geben statt wie jetzt 2.
+// TODO: wie kann man die Filter am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu; geplant: für Ausgewählte Filter soll es in der Ansicht noch 3 Spalten geben statt 2. Wie beschreiben dass leer = Alle in der alten UI
+// TODO: xrefs an entsprechende Stelle
 
 2+^| *Grundlegende*
 
 | *Auftrags-ID*
 |Gib eine oder mehrere Auftrags-IDs ein, um diese konkreten Aufträge zu suchen.
+IN hellgrau bedeutet kein Operator wählbar
 
 *_Hinweis_*:
 Mehrere IDs müssen durch Kommas getrennt werden.
@@ -1387,95 +1406,124 @@ Beispiel: `101, 102, 103`
 
 | *Externe Auftragsnummer*
 |Gib eine Externe Auftragsnummer ein, um Aufträge zu suchen.
+IN hellgrau
 
 | *Tag*
-|Wähle einen Tag aus der Dropdown-Liste, um alle Aufträge mit diesem Tag oder diesen Tags zu suchen. Es stehen folgende Tags zur Verfügung: Option leer, Auftrags-Tag, Lieferdatum: gesetzt, Status: geliefert, Status: offen, Zahlung: bezahlt.
-// TODO: xref an entsprechende Stelle
-*Ist gleich (=)*
-*Ist in (IN)*
+|Wähle einen Tag aus der Dropdown-Liste, um alle Aufträge mit diesem Tag oder diesen Tags zu suchen. Folgende Tags kannst du wählen: 
+* Option leer
+* Auftrags-Tag 
+* Lieferdatum: gesetzt 
+* Status: geliefert 
+* Status: offen 
+* Zahlung: bezahlt
+Operator:
+*Ist gleich (=)* = nur ein Tag wählbar
+*Ist in (IN)* schwarz = mehrere Tags wählbar
 
 | *Lager*
 |Wähle eine Lager aus der Dropdown-Liste, um alle Aufträge aus einem oder mehreren Lagern zu suchen.
-*Ist gleich (=)*
-*Ist in (IN)*
+*Ist gleich (=)* = nur ein Lager wählbar
+*Ist in (IN)* schwarz = mehrere Lager wählbar
 
 | *Eigner*
 |Wähle einen Eigner aus der Dropdown-Liste. +
-*Ist gleich (=)* +
-*Ist in (IN)*
+*Ist gleich (=)* = nur ein Lager wählbar
+*Ist in (IN)* schwarz = mehrere Eigner wählbar
 
 | *Mandant (Shop)*
 |Wähle den Mandant (Shop) aus, dessen Aufträge gefiltert werden sollen. +
-// TODO: prüfen Eine Mehrfachauswahl ist möglich.
-*Ist gleich (=)* +
-*Ist in (IN)*
+*Ist gleich (=)* = nur ein Mandant wählbar
+*Ist in (IN)* schwarz = mehrere Mandanten wählbar
 
 | *Auftragstyp*
-|Wähle einen Auftragstyp aus der Dropdown-Liste, um alle Aufträge dieser Art zu suchen.
+|Wähle einen Auftragstyp oder mehrere Auftragstypen aus der Dropdown-Liste, um alle Aufträge dieser Art zu suchen.
+IN hellgrau
 xref:auftraege:auftraege-verwalten.adoc[Aufträge verwalten].
 
 | *Dokumentennummer*
 |Gib eine Dokumentennummer ein.
+// TODO: ungefähr Zeichen suchen
 
 | *Dokumentart*
 |Wähle eine Dokumentart aus der Dropdown-Liste. 
 // TODO: xref hinzufügen zu Auftragsdokumente
-Es stehen folgende Dokumentenarten zur Verfügung: Rechnung, Externe Rechnung, Stornobeleg Rechnung, Gutschrift, Externe Gutschrift, Stornobeleg Gutschrift, Korrekturbeleg, Gelangensbestätigung, Mahnschreiben, Storno Mahnschreiben, Proformarechnung, Sammelrechnung, Sammelgutschrift, Reparaturschein, Abhollieferung, Angebot, Lieferschein, Bestellbestätigung, Rücksendescheine.
+Es stehen folgende Dokumentenarten zur Verfügung: 
+Rechnung, Externe Rechnung, Stornobeleg Rechnung, Gutschrift, Externe Gutschrift, Stornobeleg Gutschrift, Korrekturbeleg, Gelangensbestätigung, Mahnschreiben, Storno Mahnschreiben, Proformarechnung, Sammelrechnung, Sammelgutschrift, Reparaturschein, Abhollieferung, Angebot, Lieferschein, Bestellbestätigung, Rücksendescheine.
 
 | *Zahlungsstatus*
-|Wähle einen Zahlungsstatus aus der Dropdown-Liste, um alle Aufträge mit diesem Zahlungsstatus zu suchen. Es stehen die folgenden Zahlungsstatus zur Verfügung:
-Ausstehend, Vorausbezahlt, Teilbezahlt, Bezahlt, Überbezahlt.
+|Wähle einen Zahlungsstatus aus der Dropdown-Liste, um alle Aufträge mit diesem Zahlungsstatus zu suchen. Folgende Zahlungsstatus sind wählbar:
+* Überbezahlt
+* Bezahlt
+* Teilweise bezahlt 
+* im Voraus bezahl
+* Ausstehend
+IN hellgrau
+
 // TODO: Verweis xref  - hinzufügen
 
 | *Hauptauftrag ausschließen*
 |Wähle in der Dropdown-Liste, ob bei der Suche auch Hauptaufträge mit ausgegeben werden sollen oder nicht. Dies bezieht sich z.B. auf die Suche von Lieferaufträgen. Wähle die leere Option, *Ja* oder *Nein*. +
+*leere Option* = ALLE
 *Ja* = Es werden keine Hauptaufträge in den Ergebnissen ausgegeben. +
 *Nein* = Hauptaufträge werden in den Ergebnissen auch ausgegeben.
 
+*_Hinweis_*:
+Die leere Option bei Filtern entspricht der früheren Einstellungen *Alle*.
+
 | *Express-Lieferung*
-|wähle, ob die Lieferung als Express-Lieferung versendet werden soll.
-Wähle die leere Option (Alle), *Ja* oder *Nein*.
+|wähle, ob die Lieferung als Express-Lieferung versendet werden soll. +
+Wähle die leere Option, *Ja* oder *Nein*.
+*leere Option* = ALLE
+*Ja* = Die Lieferung soll als Express-Lieferung versendet werden. +
+*Nein* = Die Lieferung soll nicht als Express-Lieferung versendet werden.
 
 | *Gültige Rechnung*
-|Wähle die leere Option (Alle), *Ja* oder *Nein*.
+|Wähle, ob du nach einer Gültigen Rechnung suchen möchstest. +
+Wähle die leere Option, *Ja* oder *Nein*.
+*leere Option* = ALLE +
+*Ja* = Du suchst nur nach Gültigen Rechnungen. +
+*Nein* = Du suchst nur nach nicht Gültigen Rechnungen.
 
-| *Zahlungsart*
-|Wähle eine oder mehrere Zahlungsarten aus der Dropdown-Liste, um nur Aufträge mit dieser Zahlungsart oder diesen Zahlungsarten zu filtern.
+| *Zahlungsstatus*
+|Wähle eine oder mehrere Zahlungsarten aus der Dropdown-Liste, um nach Aufträgen mit dieser Zahlungsart oder diesen Zahlungsarten zu filtern.
+IN hellgrau
 
 | *Paketnummer*
-|Gib eine Paketnummer ein. +
-*Ist in (IN)*
-*Vorhanden ()*
-
-| *Status*
-|Wähle einen Status aus der Dropdown-Liste, um alle Aufträge mit diesem Status zu suchen.
+|Gib eine oder mehrere Paketnummern ein, um danach zu filtern. +
+*Ist in (IN)* schwarz = mehrere Paketnummern sind wählbar.
+*Vorhanden* = existiert
+// TODO: Vorhanden für Existenzquantor
 
 | *Versandart*
-|Wähle aus der Dropdown-Liste eine Option oder beide Optionen: DHL, DHL Shipping.
+|Wähle aus der Dropdown-Liste eine Option oder beide Optionen: DHL, DHL Shipping, um danach zu filtern.
+IN hellgrau
 
 | *Storniert*
-|Wähle, ob ein Auftrag storniert wurde. +
+|Wähle, ob du nach einem stornierten oder nicht stornierten Auftrag suchst. +
 Wähle die leere Option, *Ja* oder *Nein*.
+*leere Option* = ALLE +
+*Ja* = Du suchst nur nach stornierten Aufträgen. +
+*Nein* = Du suchst nur nach nicht stornierten Aufträgen.
 
 | *Rechnungssumme (Systemwährung)*
-|Gib die Rechnungssumme in der Systemwährung ein.
-*Ist gleich (=)*
-*Ist kleiner-gleich (<=)*
-*Ist größer-gleich (>=)*
-*Ist zwischen ([])*
+|Gib die Rechnungssumme in der Systemwährung ein, um danach zu filtern. Du kannst zwischen folgenden Operatoren wählen:
+*Ist gleich (=)* = Die Summe, nach der gesucht wird, entspricht der eingegeben Rechnungssumme.
+*Ist kleiner-gleich (<=)* = Die Summe, nach der gesucht wird, entspricht der eingegeben Rechnungssumme oder ist kleiner.
+*Ist größer-gleich (>=)* = Die Summe, nach der gesucht wird, entspricht der eingegeben Rechnungssumme oder ist größer.
+*Ist zwischen ([])* = Die Summe, nach der gesucht wird, liegt zwischen den eingegebenen Summen.
 
 | *Verkaufter Gutschein*
-|Wähle,
-IN (grau, keine andere Option)
+|Gib eine Nummer ein, um nach verkauften Gutscheinen zu filtern.
+IN hellgrau
 
 | *Eingelöster Gutschein*
-|Wähle,
-IN (grau, keine andere Option)
+|Gib eine Nummer ein, um nach eingelösten Gutscheinen zu filtern.
+IN hellgrau
 
 ////
 alte UI: Gutschein-Code: Alle, eingelöst, verkauft 
 
-als Tabelle
+als Tabelle?
 Operatoren:
 
 *Ist in (IN)*
@@ -1508,7 +1556,7 @@ Ist größer
 
 2+^| Über den Filter *Datum* kannst du einen Zeitpunkt wählen. Eine Mehrfachauswahl ist möglich. Wähle zusätzlich aus der Dropdown-Liste aus, ob du nach *Erstellungsdatum*, *Auftragseingang*, *Warenausgang* oder *Zahlungseingang* filtern möchtest.
 
-Für alle Filter bei *Datum* gilt die Auswahl: 
+Auswahl: 
 *Ist gleich (=)*
 *Ist kleiner-gleich (<=)*
 *Ist größer-gleich (>=)*
@@ -1525,14 +1573,18 @@ Für alle Filter bei *Datum* gilt die Auswahl:
 
 | *Warenausgang*
 |Gib ein Datum ein oder wähle ein Datum über den Kalender, um alle Aufträge zu suchen, die an diesem Datum verschickt wurden. +
-// TODO: Wohin damit? Alle, Nicht gebucht, gebucht, Heute, Gestern
-
+Alle, 
+Nicht gebucht, 
+gebucht, 
+Heute, 
+Gestern
+// TODO: Wie darstellen?
 
 2+^| *Status*
 
 | *Status*
 |Wähle einen Status aus der Dropdown-Liste, um alle Aufträge mit diesem Status zu suchen. +
-Wähle 
+Folgende Status sind wählbar:
 *Ist gleich (=)*
 *Ist kleiner-gleich (<=)*
 *Ist größer-gleich (>=)*
@@ -1891,9 +1943,6 @@ Mehrere Aufträge über die Gruppenfunktion bearbeiten:
 Auftrag [Beta]
 Einrichtung - Einstellungen - Aufträge - Auftragstypen - Auftrag [Beta]
 
-Tabelle 
-
-
 
 
 [#create-order-from-offer]
@@ -1974,7 +2023,6 @@ Bei Bedarf kannst du Lieferaufträge manuell über den Hauptauftrag anlegen. Bei
 Lieferaufträge manuell anlegen:
 
 // TODO: prüfen ob richtig erklärt: Portlet und Lieferauftrag anlegen
-
 . Öffne das Menü *Aufträge » Aufträge (Testphase) » Auftragssuche*.
 . Öffne aus der Übersicht den Auftrag, für den Lieferaufträge angelegt werden sollen.
 . Klicke auf das Warenkorb und wähle den Auftragstyp *Lieferauftrag*.
@@ -2089,11 +2137,10 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 
 | *Name der Artikelposition*
 |Die Artikelposition wird angezeigt.
-// TODO: Symbol Warenkorb mit + Symbol - click to add item ???
 
 Warenkorb mit +: klicke darauf, um Artikel in den Warenkorb zu legen.
 
-Cart
+Warenkorb
 | *Artikel-ID*
 |Die Artikel-ID wird angezeigt.
 
@@ -2108,38 +2155,37 @@ Cart
 |====
 
 
-==Auftragstyp Sammelauftrag
-// TODO: erklären lassen
-Einrichtung - Aufträge - Auftragstypen - Multi-Order
-
-
-==Auftragstyp Vorbestellung
-// TODO: erklären lassen
-
-
 Aufträge verwalten (alte UI)
 // TODO: verweisen, aber Doppelungen vermeiden
 
 ////
 Bundle handling am Beispiel Retoure (für alle Kindauftragstypen)
-Erstellen einer Retoure für ein Bundle 
-Im System ist es ein Artikel, der aber aufgesplittet wird, wenn man ihn in den Warenkorb legt. Am eigentlichen Artikel hängt der Preis.
-Man kann dann nur das Bundle oder die einzelnen Komponenten hinzufügen. Je nachdem was man wählt verschwindet das Warenkorb-Icon, die Handlung wird validiert und es geht nur entweder oder. Entsprechend verschwinden die Cart Icons rechts. Wenn man eine Komponente in den Warenkorb legt, verschwindet das Icon auch am Bundle.
+
+Erstellen einer Retoure für ein Artikelpaket (Bundle) 
+Im System ist ein Artikelpaket (Bundle)  als ein Artikel hinterlegt, der aber aufgesplittet wird, wenn man ihn in den Warenkorb legt. An diesem eigentlichen Artikel hängt der Preis.
+Man kann daher nur entweder das Bundle oder die einzelnen Komponenten dem Warenkorb hinzufügen. Je nachdem, welche Option man wählt, verschwindet das Warenkorb-Icon, die Handlung/Menge wird validiert und es geht nur entweder oder. Entsprechend verschwinden die Icons Warenkorb rechts. Legt man eine Komponente in den Warenkorb, verschwindet das Icon auch am Artikelpaket (Bundle).
 
 Auftrag für das Bundle und Komponenten werden extra hinzugefügt. Eigener Typ Artikel
 
+* Sonderfall Artikelpakete: +
+**Artikelpakete** bestehen aus mehreren Einzelartikeln. Für diese Pakete wird in plentymarkets kein eigener Warenbestand geführt. Der Bestand der Artikelpakete richtet sich nach dem Bestand der darin enthaltenen Artikel. Wird ein Artikelpaket verkauft, werden die darin enthaltenen Artikel automatisch in den reservierten Bestand übernommen. +
+*_Hinweis:_* Damit ein Paket verfügbar ist, müssen dessen Bestandteile im selben Lager liegen.
+
 Neu dazu: Nettopreis bearbeiten
 Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur den Bruttopreis bearbeiten, sondern auch den Nettopreis. Der Stift Bearbeiten ist für Nettopreis dazu gekommen. 
-Bei Standardeinstellung wird der 
-Der manuelle Preis 
+Bei Standardeinstellung wird der ... Der manuelle Preis ...
 ////
 
-Widget Artikel zurückbuchen
-// TODO: in Entwicklung, erklären lassen
- Neuer Eintrag in der Seitennavigation = Book back items 
-(Sales Order & Warranty: Only visible if a outgoing item is set, 
-Return: always visible)
+// TODO: Portlet Waren zurückbuchen
+//// 
+in Entwicklung, erklären lassen; siehe https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
 
+Neuer Eintrag in der Seitennavigation = Waren zurückbuchen 
+Auftrag & Garantie: Only visible if a outgoing item is set, 
+Retoure: always visible
+
+siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
+//// 
 
 2+^| *Artikel*
 
@@ -2149,8 +2195,11 @@ Return: always visible)
 | *Offene Menge* (display field)
 |Die *Offene Menge* wird angezeigt.
 
-batch (display field)
-bbd (display field)
+| *Charge* (display field)
+|Die
+
+| *Mindesthaltbarkeitsdatum (MHD)* (display field)
+|Die
 
 | *Artikel-ID* (display field)
 |Die *Artikel-ID* wird angezeigt.
@@ -2163,12 +2212,30 @@ bbd (display field)
 
 2+^| *Warenkorb*
 
-reverse (validation reverse cant be higher than "quantity in order" - "Open"
-warehouse (single select)
-storage location (see purchase order transactions)
-quantity in order (display field)
-batch (display field)
-bbd (display field)
-Item Id (display field)
-variantion id (display field)
-Variationname (display field)
+| *reverse* (display field)
+|Die
+(validation reverse cant be higher than "quantity in order" - "Open"
+
+| *Lager* (single select)
+|Die
+
+| *Lagerort* (see purchase order transactions)
+|Die
+
+| *Menge im Auftrag* (display field)
+|Die
+
+| *Charge* (display field)
+|Die
+
+| *Mindesthaltbarkeitsdatum (MHD)* (display field)
+|Die
+
+| *Artikel-ID* (display field)
+|Die *Artikel-ID* wird angezeigt.
+
+| *Varianten-ID* (display field)
+|Die *Varianten-ID* wird angezeigt.
+
+| *Variantenname* (display field)
+|Die *Variantenname* wird angezeigt.
