--- a/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
@@ -8,6 +8,8 @@
 Unter Einrichtung - Aufträge - Auftragstypen - Auftrag [Beta]
 siehe auftraege-testphase
 
+
+
 == Lieferauftrag
 
 [.instruction]
@@ -25,7 +27,7 @@ Gehe folgendermaßen vor, um einen Lieferauftrag anzulegen:
 → Der Lieferauftrag wird angelegt und in einem eigenen Fenster geöffnet.
 // TODO: table suchen/anlegen; Schritte für automatisch und best. Positionen
 
-Aufträge in Lieferaufträge splitten
+Einstellungen für Aufträge in Lieferaufträge splitten
 . Öffne das Menü *Einrichtung » Aufträge » Lieferauftrag*.
 → Die Ansicht *Aufträge in Lieferaufträge splitten nach* öffnet sich. Voreingestellt ist die Option *Lager*. 
 . Wähle aus der Dropdown-Liste:
@@ -35,6 +37,8 @@ Versandprofil,
 Lager und Versandprofil, 
 Lager- und Netto-Warenbestand
 
+//TODO: entscheiden ob in auftraege lassen oder in auftragstypen 
+≈
 
 
 == Angebot
@@ -42,6 +46,7 @@ Lager- und Netto-Warenbestand
 https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/angebot.html
 ////
 // TODO: neue UI 
+
 
 == Retoure
 
@@ -479,6 +484,7 @@ Cart
 // TODO: Tab Übersicht
 
 Wenn ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* ?? des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
+
 // TODO: Neu: wird links unter Auftrag angezeigt ….
 
 
@@ -972,5 +978,77 @@ Dokument Sammelgutschrift erzeugen:
 
 | *Kommentar*
 |Einen Text eingeben, der auf der Sammelgutschrift unterhalb der Artikelpositionen angezeigt wird. Die Eingabe ist optional.
+
 |====
 ////
+
+
+// TODO: erklären lassen
+[#order-type-advance-order]
+== Auftragstyp Vorbestellung nutzen
+
+Vorbestellungen sind im Online-Handel ein wichtiges Instrument im Marketing-Mix. Meist können Artikel noch vor der tatsächlichen Verfügbarkeit zum günstigen Einführungspreis bestellt werden. Für eine Warenwirtschaft stellt diese Situation einen Sonderfall dar, da noch nicht verfügbare Artikel noch keinen Lagerbestand haben können.
+
+Vorbestellungen sind in plentymarkets sehr einfach zu erstellen. Es gibt dafür den Auftragstyp *Vorbestellung*, den du bei manuell erfassten Aufträgen verwenden kannst.
+// TODO: anpassen auf neue UI
+
+Um Vorbestellungen über den Webshop entgegennehmen zu können, sind das Erscheinungsdatum und die Artikelverfügbarkeit notwendig. Nimm dazu die auf dieser Seite beschriebenen Einstellungen am Artikel vor.
+
+//// 
+[IMPORTANT]
+.Manuelle Auftragseingabe
+====
+Der Auftragstyp *Vorbestellung* kann nur bei manueller Auftragseingabe gewählt werden.
+====
+
+[#1110]
+=== Erscheinungsdatum
+
+Die Option *Erscheinungsdatum* findest du in der Artikelbearbeitung im Tab *Verfügbar*. Hier kannst du über einen Kalender das Datum hinterlegen, zu dem der Artikel verfügbar sein wird. Gehe dazu wie im Folgenden beschrieben vor.
+
+[.instruction]
+Erscheinungsdatum eintragen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten*.
+. Öffne einen Artikel, den du vorbestellbar machen musst.
+. Öffne die Variante, die vorbestellbar ist.
+. Im Tab *Einstellungen* der Variante scrolle in den Abschnitt *Verfügbarkeit*.
+. Trage bei *Erscheinungsdatum* das Datum ein, ab dem der Artikel verfügbar sein soll.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+Im nächsten Schritt sorge dafür, dass das Erscheinungsdatum deinen Kunden angezeigt wird. Gehe dazu wie im Folgenden beschrieben vor.
+
+[.instruction]
+Erscheinungsdatum im Webshop sichtbar machen:
+
+. Öffne das Menü *CMS » Webdesign » Ordner: Layout » Ordner: ItemView*.
+. Öffne das Template *ItemViewSingleItem*.
+. Füge die Template-Variable *$ReleaseDate* ein.
+. *Speichere* die Einstellungen.
+
+[#1120]
+=== Artikelverfügbarkeit
+
+Eine weitere Voraussetzung ist die korrekte Einstellung der *Artikelverfügbarkeit*. Gehe dazu wie im Folgenden beschrieben vor.
+
+[.instruction]
+Artikelverfügbarkeit für Vorbestellungen einstellen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten*.
+. Öffne einen Artikel, den du vorbestellbar machen möchtest.
+. Wechsle in das Tab *Einstellungen*.
+. Wähle für die Option *Beschränkung* die Einstellung *Keine Beschränkung*. +
+→ Der Artikel kann nun ohne tatsächlichen Bestand vorbestellt, also gekauft werden.
+
+[TIP]
+.Maximale Bestellmenge
+====
+Damit andere Online-Händler:innen deine Vorbestellungen nicht dazu missbrauchen können, deine Bestände zum günstigen Preis komplett aufzukaufen, trage im *Tab Verfügbar* bei der Option *Maximale Bestellmenge* einen Wert ein. Trage dort den Wert *1* ein und der Artikel kann pro Bestellung nur ein einziges Mal gekauft werden. Setze die maximale Abgabemenge auf den Wert *0*, um ohne Beschränkung zu verkaufen.
+====
+////
+
+==Auftragstyp Sammelauftrag
+// TODO: erklären lassen, noch nicht neu
+Einrichtung - Aufträge - Auftragstypen - Multi-Order
+
+
