--- a/docs/en-gb/modules/markets/partials/catalogue-filters.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-filters.adoc
@@ -1,13 +1,13 @@
 Add filters to only export specific items. You can find the filters in the side navigation of the *Data » Catalogues » [Open catalogue] » Filters* menu.
 
-In catalogues with marketplace formats, both user-defined filters and template filters are available. Template filters apply automatically and cannot be deselected. User-defined filters can be set as needed to only export specific items.
+For catalogues with marketplace formats, both template filters and user-defined filters are available. Template filters are applied automatically and cannot be deselected. User-defined filters can be set as needed to only export specific items.
 
 [.instruction]
 Adding a filter:
 
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
-. Select a catalogue. +
+. Select the catalogue. +
 → The overview opens.
 . On the left in the side navigation, click on the *Filters* (icon:filter_alt[set=material]) tab. +
 → The filter overview opens.
@@ -20,7 +20,8 @@ Adding a filter:
 . Save (icon:save[set=material]) the settings. +
 → The filter is saved.
 . Add additional filters as necessary. +
-→ Only data that meets all filter criteria is exported.
+→ Only records that meet all filter criteria is exported. +
+*_Tip:_* The number next to the word *Filter* shows how many filters have been set. The template filters are included in this number.
 
 [.collapseBox]
 .Available catalogue filters
@@ -30,7 +31,7 @@ For {market}, the filters explained in <<tabelle-katalogfilter>> are available.
 [[table-catalogue-filters]]
 .Available catalogue filters
 [cols="1,3a"]
-|====
+|===
 2+^| *User-defined filters*
 
 | *Has a SKU*
@@ -186,5 +187,5 @@ Only variations which are linked to at least one of the selected tags in the *Ta
 | *Variation has child variations*
 | * *Has child variations* = Only items with multiple variations are exported. +
 * *Does not have child variations* = Only variations which do not have any variations except for the main variation are exported.
-|====
+|===
 --
