--- a/docs/de-de/modules/maerkte/partials/catalogue-filters.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-filters.adoc
@@ -20,7 +20,8 @@ Filter hinzufügen:
 . Speichere (icon:save[set=material]) die Einstellungen. +
 → Der Filter wird gespeichert.
 . Füge bei Bedarf weitere Filter hinzu. +
-→ Nur die Daten, auf die alle hinzugefügten Filter zutreffen, werden exportiert.
+→ Nur die Datensätze werden exportiert, auf die alle hinzugefügten Filter zutreffen. +
+*_Tipp:_* Die Zahl neben dem Wort *Filter* zeigt an, wie viele Filter aktiv sind. Die Template-Filter werden mitgezählt.
 
 [.collapseBox]
 .Verfügbare Katalog-Filter
