--- a/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
+++ b/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
@@ -226,6 +226,28 @@ Bei Etsy muss die Hauptvariante des Artikels für den Marktplatz aktiviert werde
 //end::checklist-availability-active-etsy[]
 
 
+//tag::checklist-check-filters[]
+[.collapseBox]
+.Sind die Katalogfilter korrekt gesetzt?
+--
+Im Menü *Daten » Kataloge » [Katalog öffnen] » Filter* kannst du Filter setzen, damit nur bestimmte Varianten exportiert werden. Wenn Filter aktiv sind, werden nur die Datensätze exportiert, auf die alle hinzugefügten Filter zutreffen. Deshalb lohnt sich bei Problemen ein Blick auf die Filtereinstellungen.
+
+*_Wichtig:_* Template-Filter werden vom Marktplatz vorgegeben und automatisch angewendet. Du kannst diese Template-Filter nicht entfernen.
+
+[.instruction]
+Filter prüfen:
+
+. Öffne das Menü *Daten » Kataloge » [Katalog öffnen]*. +
+. Klicke links in der Seitennavigation auf das Tab *Filter* (icon:filter_alt[set=material]). +
+*_Tipp:_* Die Zahl neben dem Wort *Filter* zeigt an, wie viele Filter aktiv sind. Die Template-Filter werden mitgezählt. +
+→ Die Filter-Übersicht wird geöffnet. +
+. Prüfe die Logik der Filter.
+. Entferne bei Bedarf einen oder mehrere Filter.
+. Speichere (icon:save[set=material]) die Einstellungen.
+--
+//end::checklist-check-filters[]
+
+
 ////
 include::partial$checklist-variations.adoc[tag=checklist-intro]
 
