--- a/docs/de-de/modules/webshop/pages/best-practices.adoc
+++ b/docs/de-de/modules/webshop/pages/best-practices.adoc
@@ -31,3 +31,6 @@ include::partial$bp-ceres-psi.adoc[leveloffset=1]
 
 [#suche.adoc]
 include::partial$bp-ceres-suche.adoc[leveloffset=1]
+
+[#widerrufsrecht-einwilligung.adoc]
+include::partial$bp-lts-waive-cancellation-rights.adoc[leveloffset=1]
