limango - changes requested by limango for omnibus - DE+EN

--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -348,11 +348,9 @@ Futterstoff zuordnen und an der Variante speichern:
 | . Verkaufspreis des Preistyps *UVP* mit den Varianten verknüpfen.
 . Preis speichern.
 
-*_Für die Angabe des UVP gelten die folgenden Regeln:_*
+*_Für die Angabe des UVP gilt die folgende Regel:_*
 
 * Der UVP darf nicht niedriger sein als der Brutto-Verkaufspreis.
-* Wenn der UVP höher ist als der Verkaufspreis, wird im limango-Shop ein Streichpreis angezeigt.
-* Du hast keinen UVP, zum Beispiel weil du selbst Hersteller:in bist? Dann ordne denselben Verkaufspreis wie für das Marktplatz-Datenfeld *Brutto-Verkaufspreis* zu. Bei {market} wird dann kein durchgestrichener Preis angezeigt.
 
 | Bruttoverkaufspreis
 | . Verkaufspreis ohne Preistyp mit den Varianten verknüpfen. +
