--- a/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
@@ -184,13 +184,9 @@ _or_
 
 3+^| Sales prices
 
-| RRP +
-(_mandatory field_)
+| RRP
 | * *Sales price » [Select sales price of the type RRP for the referrer limango]*
 
-_Recommended fallback data field:_
-
-* *Sales price » [Select the same sales price as for the data field "Gross sales price"]*
 | Variation
 
 | Gross sales price +
