add translation unsaved changes contact ui

--- a/docs/en-gb/modules/crm/pages/create-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/create-contact.adoc
@@ -5,13 +5,13 @@
 
 [.previous-next-navigation]
 xref:crm:search-contact.adoc#[icon:long-arrow-left[] Searching for a contact]
-xref:crm:edit-contact.adoc#[Editing a contact icon:long-arrow-right[]]
+xref:crm:edit-contact.adoc#[Editing a contact[] icon:long-arrow-right]
 
 '''
 
-Do you want to easily and quickly create new contacts with an individually adjustable user interface, for example during a phone call? First of all, create a <<#create-view, new view>> according to your needs.
+Do you want to easily and quickly create new contacts with an individually adjustable user interface, for example during a phone call? First of all, set up a <<set-up-view#, new view>> according to your needs.
 
-[#create-view]
+[#set-up-view]
 == Creating a view
 
 The user interface to create a new contact allows a high degree of flexibility for positioning content and data. This works by intuitively positioning areas for content and elements on the dashboard via drag-and-drop. Each area and each element can be further edited by clicking on *Edit view* (icon:design_inline_edit[set=plenty]) in the top right of the contact data record. <<#table-functions-new-contact>> contains an overview on the functions available in the editing mode of contact data record.
@@ -41,13 +41,13 @@ The user interface to create a new contact allows a high degree of flexibility f
 |This area displays the view that is currently opened. Click on icon:sort-down[role=darkGrey] to switch to another view or to create a new view.
 
 | *Restoring the previously saved state*
-|icon:history[set=material]
+|icon:restore[set=material]
 |Resets the contact data record to the state that was last saved.
 
 | *Save*
 |icon:save[set=material]
 |Saves the changes made to the contact data record. By doing so, you can save as many different views as you like. +
-When you want to manually create a contact data record the next time, you can open your preferred view via the drop-down list in the top right and start creating a new contact. Also via this drop-down list, you can create a new preset by clicking on icon:add[set=material] *Create new preset*.
+When you want to manually create a contact data record the next time, you can open your preferred view via the drop-down list in the top right and start creating a new contact. Also in this drop-down list, you can create a new view by clicking on icon:add[set=material] *Create new preset*.
 
 |
 |icon:more_vert[set=material]
@@ -84,6 +84,10 @@ Creating a contact:
 . Carry out the settings. Note <<#table-create-contact>> and the information about the <<#preselected-fields-new-contact, fields that are already preselected>>.
 . *Save* (icon:save[set=material]) the settings. +
 → The contact is created.
+
+[TIP]
+Once the contact has been created, you will be forwarded to the contact data record. You are then able to xref:crm:edit-contact.adoc#[further edit] the contact. Note also the information about the xref:crm:edit-contact.adoc#saving-changes[logic for unsaved changes].
+In the contact data record in the side navigation on the bottom left, you can click on the contact ID (icon:content_copy[set=material]) to copy the ID of the contact to the clipboard.
 
 [[table-create-contact]]
 .Creating a contact
@@ -155,7 +159,8 @@ This data is used for the invoice address, for example. The order of the postcod
 *Region/County*
 |Select the values from the drop-down list. +
 *_Note:_* The drop-down list *Region/County* is _not_ available for all countries. +
-*_Note:_* The country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu is automatically preselected.  You can of course adjust the setting before saving the contact data record.
+*_Note:_* The country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu is automatically preselected. You can of course adjust the setting before saving the contact data record. +
+*_Note:_* If you want to have other countries shown here, you have to activate the xref:fulfilment:preparing-the-shipment.adoc#[countries of delivery] first. To do so, go to *Setup » Orders » Shipping » Options* and open the *Countries of delivery* tab. 
 
 2+^| *Contact details*
 
@@ -215,7 +220,7 @@ This data is used for the invoice address, for example. The order of the postcod
 Select 5 red stars for the worst and 5 yellow stars for the best rating.
 
 | *Guest account*
-|You don’t want to create a contact data record, but a guest order instead? If so, then select this option (icon:check_box[set=material, role=skyBlue]).
+|You don’t want to create a contact data record, but a guest order instead? If so, select (icon:check_box[set=material, role=skyBlue]) this option.
 
 | *Debtor account*
 |Do you want to save more separate customer numbers? Generally, this number corresponds to the customer number or the debtor number in your financial accounting. It can be helpful to you or your tax accountant when further processing your receipts. This field can also be filled in automatically, if required.
@@ -241,7 +246,7 @@ For further information about the debtor account, refer to the xref:orders:accou
 *_Note:_* Depending on the selected default setting in the system, the system language is automatically preselected here. You can of course adjust the setting before saving the contact data record.
 
 | *Block contact*
-|Decide whether or not the contact should be blocked for the specific client. +
+|Select whether or not the contact should be blocked for the specific client. +
 If the option is activated (icon:check_box[set=material, role=skyBlue]), the contact is blocked and can _no longer_ log into your plentyShop. If the option is not activated (icon:check_box_outline_blank[set=material]), the contact is allowed to log into your plentyShop.
 
 | *Owner*
@@ -267,7 +272,7 @@ Necessary settings: +
 
 - Activate the shipping profile for the items. +
 
-Check the necessary settings that are listed here and activate (icon:check_box[set=material, role=skyBlue]) the payment method. This allows the contact to use the payment method.
+Check the necessary settings that are listed here and activate (icon:toggle_on[set=material, role=skyBlue]) the payment method. This allows the contact to use the payment method.
 
 |====
 
@@ -278,7 +283,7 @@ When you create a new contact, some fields are already preselected. You can of c
 
 * In the address details:
 ** the address type *Invoice address*
-** the country that you saved as default location in the *Setup » Client » [Select client] » Settings* menu
+** the country that you saved as default location in the *Setup » Client » [Select client] » Settings*
 
 * In the contact details:
 ** the type *Customer* (this is the type with the lowest ID in the *Setup » CRM » Types* menu)
@@ -302,4 +307,4 @@ The logic works in the following way:
 
 [.previous-next-navigation]
 xref:crm:search-contact.adoc#[icon:long-arrow-left[] Searching for a contact]
-xref:crm:edit-contact.adoc#[Editing a contact icon:long-arrow-right[]]
+xref:crm:edit-contact.adoc#[Editing a contact[] icon:long-arrow-right]
