--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1301,7 +1301,7 @@ Das Sternchen verschwindet, wenn du deine Änderungen speicherst oder wenn du di
 |Die Änderungen werden gespeichert und der Kontaktdatensatz wird geschlossen. Wenn du den Kontaktdatensatz wieder öffnest, siehst du, dass die Einstellungen geändert wurden. Diese Aktion ist die gleiche wie der Speichern-Button weiter oben in der Toolbar. Solange der Speichervorgang läuft, ist der Speichern-Button deaktiviert.
 
 |[#intable-save-changes-do-not-save]*Nicht speichern*
-|Die Änderungen werden verworfen und der Kontakdatensatz wird geschlossen. Wenn du den Kontaktdatensatz wieder öffnest, siehst du, dass die Einstellungen wieder auf den Ausgangszustand zurückgesetzt wurden.
+|Die Änderungen werden verworfen und der Kontaktdatensatz wird geschlossen. Wenn du den Kontaktdatensatz wieder öffnest, siehst du, dass die Einstellungen wieder auf den Ausgangszustand zurückgesetzt wurden.
 
 |[#intable-save-changes-cancel]*Abbrechen*
 |Nur das Fenster wird geschlossen. Der Kontaktdatensatz bleibt geöffnet. Deine Änderungen sind noch offen, d.h. sie wurden noch nicht gespeichert. Du kannst mit der Bearbeitung des Kontaktdatensatzes fortfahren.
