otto market referrer screenshot - DE+EN

--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -153,6 +153,8 @@ a| Wählen, welcher Versanddienstleister verwendet werden soll, wenn Retouren-Se
 
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
+image::maerkte:otto-market-referrer.png[]
+
 [#400]
 === Verkaufspreis festlegen
 
