add permissions for missing portlets in contact ui (#442)
* add permissions for missing portlets in contact ui

* update links

* update translation

--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -14,6 +14,8 @@ Mit einem Klick auf einen Eintrag in der folgenden Liste gelangst du direkt in d
 
 * <<#adress-layout, Adress-Layout für Lieferscheine einrichten>>
 * <<#rechte-vergeben, Rechte für Backend-Benutzer:innen vergeben>>
+** <<#rechte-freigeben-bereiche-schaltflaechen, Rechte für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben>>
+** <<#ansichten-freigeben-andere-benutzer, Ansichten für andere Benutzer:innen freigeben>>
 * <<#kundenklasse-erstellen, Kundenklasse erstellen>>
 * <<#typ-erstellen, Typ erstellen>>
 * <<#tags-erstellen, Tags erstellen>>
@@ -99,7 +101,87 @@ include::_includes:page$rechte.adoc[]
 
 include::_includes:page$rechte.adoc[]
 
-[discrete]
+[#rechte-freigeben-bereiche-schaltflaechen]
+=== Rechte für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben
+
+Wenn Personen mit *Backend*-Zugriffsrechten bestimmte xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Bereiche im Kontaktdatensatz] und/oder Schaltflächen und Funktionen in diesen Bereichen nicht sehen können, prüfe die Rechte im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* im jeweiligen Benutzer:innenkonto.
+
+[.collapseBox]
+.Rechte für Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz
+--
+
+<<#table-missing-areas-contact-data-record>> listet die Rechte auf, die im Benutzer:innenkonto aktiviert werden müssen, wenn eine Person mit *Backend*-Zugriffsrechten Bereiche im Kontaktdatensatz nicht sehen kann.
+
+[[table-missing-areas-contact-data-record]]
+.Rechte für Bereiche im Kontaktdatensatz
+[cols="2,2"]
+|====
+|Fehlender Bereich im Kontaktdatensatz |Benötigtes Recht im Benutzer:innenkonto
+
+| xref:crm:kontakt-bearbeiten.adoc#auftraege[Aufträge], xref:crm:kontakt-bearbeiten.adoc#konto[Konto]
+|Aufträge > Anzeigen +
+Aufträge > Auftragsstatus > Anzeigen
+
+| xref:crm:kontakt-bearbeiten.adoc#eigenschaften[Eigenschaften] 
+|Einrichtung > Eigenschaft > Anzeigen +
+Einrichtung > Eigenschaft > Relation > Anzeigen
+
+| xref:crm:kontakt-bearbeiten.adoc#bankdaten[Bankdaten] 
+|CRM > Bankdaten > Anzeigen
+
+| xref:crm:kontakt-bearbeiten.adoc#tickets[Tickets]
+|CRM > Ticket > Anzeigen
+
+| xref:crm:kontakt-bearbeiten.adoc#firma[Firma] 
+|CRM > Firma > Anzeigen
+
+| xref:crm:kontakt-bearbeiten.adoc#messenger[Messenger]
+|CRM > Nachricht > Anzeigen
+
+|====
+
+<<#table-missing-buttons-contact-data-record>> listet die Rechte auf, die im Benutzer:innenkonto aktiviert werden müssen, wenn eine Person mit *Backend*-Zugriffsrechten Schaltflächen und/oder Funktionen innerhalb bestimmter Bereiche im Kontaktdatensatz nicht sehen kann.
+
+[[table-missing-buttons-contact-data-record]]
+.Rechte für Schaltflächen und Funktionen im Kontaktdatensatz
+[cols="2,2"]
+|====
+|Fehlende Schaltfläche/Funktion im Kontaktdatensatz |Benötigtes Recht im Benutzer:innenkonto
+
+| xref:crm:kontakt-bearbeiten.adoc#plentyshop-login[plentyShop-Login], xref:crm:kontakt-bearbeiten.adoc#passwort-manuell-aendern[Passwort ändern], Eingabefeld mit Login-URL, xref:crm:kontakt-bearbeiten.adoc#link-kopieren-oeffnen[Schaltfläche zum Kopieren], xref:crm:kontakt-bearbeiten.adoc#link-kopieren-oeffnen[Link öffnen] 
+|CRM > Passwort > Bearbeiten
+
+| Übersicht, xref:crm:kontakt-bearbeiten.adoc#auftraege[Aufträge], neuer Auftrag, neues Angebot etc. 
+|Aufträge > Erstellen
+
+|Übersicht, Tickets, xref:crm:kontakt-bearbeiten.adoc#tickets[Schaltfläche zum Erstellen eines neuen Tickets] 
+|CRM > Ticket > Erstellen
+
+|Übersicht, xref:crm:kontakt-suchen.adoc#kontextmenue-uebersicht[Messenger-Schaltfläche im Kontextmenü]
+|CRM > Nachricht > Anzeigen
+
+|Messenger, xref:crm:kontakt-bearbeiten.adoc#messenger[Schaltfläche zum Erstellen einer neuen Nachricht]
+|CRM > Nachricht > Erstellen
+
+|Bankdaten, xref:crm:kontakt-bearbeiten.adoc#bankdaten[Bankdaten hinzufügen/bearbeiten/löschen] 
+|CRM > Bankdaten > Erstellen +
+CRM > Bankdaten > Aktualisieren +
+CRM > Bankdaten > Löschen
+
+| Firmen, xref:crm:kontakt-bearbeiten.adoc#firma-noch-nicht-verknuepft[Verknüpfung zum Kontakt erstellen], xref:crm:kontakt-bearbeiten.adoc#verknuepfung-firma-loeschen[Verknüpfung zur Firma löschen] 
+|CRM > Firma > Erstellen +
+CRM > Firma > Aktualisieren +
+CRM > Firma > Löschen
+
+|Kontaktdetails Kontextmenü, xref:crm:kontakt-bearbeiten.adoc#kontakt-loeschen-detailansicht[Löschen-Schaltfläche]
+|CRM > Kontakt > Löschen
+
+|Übersicht, xref:crm:kontakt-bearbeiten.adoc#kontakt-loeschen-uebersicht[Kontextmenü], Schaltfläche xref:crm:kontakt-suchen.adoc#kontextmenue-uebersicht[Kontakt löschen]
+|CRM > Kontakt > Löschen
+
+|====
+--
+
 [#ansichten-freigeben-andere-benutzer]
 === Ansichten für andere Benutzer:innen freigeben
 
